feat: service networking
